# eduplatform

./: .env  .env.dev  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
Eduplatform_site/: db.sqlite3  manage.py
Eduplatform_site/Eduplatform_site/: asgi.py  mixins.py  settings.py  urls.py  wsgi.py
Eduplatform_site/account/: admin.py  annotations.py  endpoints.py  managers.py  mixins.py  models.py  serializers.py  tests.py  urls.py
Eduplatform_site/account/migrations/: 0001_create_user.py  0001_initial.py  0002_alter_user_options.py  0002_create_teacher_model.py  0002_group_photo_alter_student_options_and_more.py  0002_teacher.py  0003_alter_student_completed_tests.py  0003_create_student_model.py  0004_create_photo_model.py  0005_create_group_model.py  0006_add_field_course_in_group_model.py  0006_group_course.py
Eduplatform_site/account/tests/: consts.py  tests_api.py
Eduplatform_site/learning/: admin.py  endpoints.py  models.py  serializers.py  urls.py
Eduplatform_site/learning/migrations/: 0001_create_course_model.py  0001_create_photo.py  0001_initial.py  0002_create_teacher.py  0002_create_topic_model.py  0002_topic_content.py  0003_create_article_model.py  0003_create_student.py  0004_create_course.py  0004_create_test_model.py  0005_create_group.py  0005_create_question_model.py  0006_create_answer_model.py  0006_create_topic.py  0007_create_article.py  0007_create_attempt_model.py  0008_create_teacher.py  0009_create_question.py  0010_create_answer.py  0011_create_attempt.py
