[tool.poetry]
name = "eduplatform_site"
version = "0.1.0"
description = ""
authors = ["shar <Sasha.sharai1998@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "3.13.1"

[tool.poetry.dev-dependencies]
Django = "^4.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
